--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,7 @@
   "files.associations": {
     "stdio.h": "c",
     "stdbool.h": "c",
-    "sdl_image.h": "c",
-    "bullet.h": "c"
+    "sdl_image.h": "c"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
